tests/outref/TERR024.ref

-- TERR024 : OCTO483 : Issue error when CREATE TABLE DELIM list contains non-integers

-- No VARCHARs as delimiters
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM ("hello") GLOBAL "^delimnames(keys(""id""))";
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, "world") GLOBAL "^delimnames(keys(""id""))";

-- No NUMERICs as delimiters
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (3.14) GLOBAL "^delimnames(keys(""id""))";
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, 3.14) GLOBAL "^delimnames(keys(""id""))";

-- No BOOLEANs as delimiters
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (true) GLOBAL "^delimnames(keys(""id""))";
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, true) GLOBAL "^delimnames(keys(""id""))";

-- No identifiers as delimiters
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (hello) GLOBAL "^delimnames(keys(""id""))";
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, hello) GLOBAL "^delimnames(keys(""id""))";

-- No functions as delimiters
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (ABS(-1)) GLOBAL "^delimnames(keys(""id""))";
CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, ABS(-1)) GLOBAL "^delimnames(keys(""id""))";

[ERROR] PATH:LINENUM DATE TIME : Type VARCHAR not compatible for column DELIM specification
Error with syntax near (line 1, column 147):

CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM ("hello") GLOBAL "^delimnames(keys(""id""))";
                                                                                                                                                  ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM ("hello") GLOBAL "^delimnames(keys(""id""))";
[ERROR] PATH:LINENUM DATE TIME : Type VARCHAR not compatible for column DELIM specification
Error with syntax near (line 1, column 150):

CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, "world") GLOBAL "^delimnames(keys(""id""))";
                                                                                                                                                     ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, "world") GLOBAL "^delimnames(keys(""id""))";
[ERROR] PATH:LINENUM DATE TIME : Type NUMERIC not compatible for column DELIM specification
Error with syntax near (line 1, column 141):

CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (3.14) GLOBAL "^delimnames(keys(""id""))";
                                                                                                                                            ^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (3.14) GLOBAL "^delimnames(keys(""id""))";
[ERROR] PATH:LINENUM DATE TIME : Type NUMERIC not compatible for column DELIM specification
Error with syntax near (line 1, column 144):

CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, 3.14) GLOBAL "^delimnames(keys(""id""))";
                                                                                                                                               ^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, 3.14) GLOBAL "^delimnames(keys(""id""))";
Error with syntax near (line 1, column 141):

CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (true) GLOBAL "^delimnames(keys(""id""))";
                                                                                                                                            ^^^^
syntax error, unexpected TRUE_TOKEN, expecting LITERAL

[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (true) GLOBAL "^delimnames(keys(""id""))";
Error with syntax near (line 1, column 144):

CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, true) GLOBAL "^delimnames(keys(""id""))";
                                                                                                                                               ^^^^
syntax error, unexpected TRUE_TOKEN, expecting LITERAL

[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, true) GLOBAL "^delimnames(keys(""id""))";
Error with syntax near (line 1, column 141):

CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (hello) GLOBAL "^delimnames(keys(""id""))";
                                                                                                                                            ^^^^^
syntax error, unexpected IDENTIFIER_ALONE, expecting LITERAL

[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (hello) GLOBAL "^delimnames(keys(""id""))";
Error with syntax near (line 1, column 144):

CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, hello) GLOBAL "^delimnames(keys(""id""))";
                                                                                                                                               ^^^^^
syntax error, unexpected IDENTIFIER_ALONE, expecting LITERAL

[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, hello) GLOBAL "^delimnames(keys(""id""))";
Error with syntax near (line 1, column 141):

CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (ABS(-1)) GLOBAL "^delimnames(keys(""id""))";
                                                                                                                                            ^^^
syntax error, unexpected IDENTIFIER_ALONE, expecting LITERAL

[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (ABS(-1)) GLOBAL "^delimnames(keys(""id""))";
Error with syntax near (line 1, column 144):

CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, ABS(-1)) GLOBAL "^delimnames(keys(""id""))";
                                                                                                                                               ^^^
syntax error, unexpected IDENTIFIER_ALONE, expecting LITERAL

[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: CREATE TABLE DELIMNAMES (id INTEGER PRIMARY KEY, firstName VARCHAR(30), lastName VARCHAR(30), middleInitial VARCHAR(1), age INTEGER) DELIM (9, ABS(-1)) GLOBAL "^delimnames(keys(""id""))";
